# arstotzka

./: .clang-format  .gitignore  CMakeLists.txt  Justfile  PKGBUILD  README.md  decoration.cpp  decoration.hpp  flake.nix  metadata.json  package.nix  shell.nix
